--- a/event-01-25-record.html
+++ b/event-01-25-record.html
@@ -12,8 +12,41 @@
   <meta name="HandheldFriendly" content="true">
   <title>过年天天乐</title>
   <link rel="stylesheet" type="text/css" href="style/main.min.css">
-  <link rel="stylesheet" type="text/css" href="style/lottery.css">
   <style>
+.lottery-record-bg {
+  background-image: url(../images/event-01-25/lottery-record-bg.png);
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  margin-top: 1rem;
+  min-height: 26.6rem; }
+
+.my-award-record {
+  padding-top: 1rem;
+  box-sizing: border-box;
+  width: 16.5rem;
+  margin: 0 auto; }
+
+.record-head {
+  font-size: 1rem;
+  color: #777;
+  border-bottom: 0.1rem solid #d1c0a5; }
+  .record-head span {
+    text-align: center;
+    display: inline-block;
+    width: 49%;
+    padding: 0.5rem 0; }
+
+.record-list {
+  font-size: 0.75rem;
+  color: #474747;
+  padding-top: 0.5rem; }
+  .record-list li {
+    padding: 0.5rem 0; }
+    .record-list li span {
+      display: inline-block;
+      width: 49%;
+      text-align: center; }
 
   </style>
 </head>
