增加加载进度条

--- a/event-01-25-record.html
+++ b/event-01-25-record.html
@@ -13,8 +13,9 @@
   <title>过年天天乐</title>
   <link rel="stylesheet" type="text/css" href="style/main.min.css">
   <style>
+  body{background-color:#f12b71}
 .lottery-record-bg {
-  background-image: url(../images/event-01-25/lottery-record-bg.png);
+  background-image: url(images/event-01-25/lottery-record-bg.png);
   background-position: top;
   background-repeat: no-repeat;
   background-size: 100% 100%;
