--- a/event-01-25.html
+++ b/event-01-25.html
@@ -13,14 +13,15 @@
   <title>过年天天乐</title>
   <link rel="stylesheet" type="text/css" href="style/main.min.css">
   <script>
-  //获取浏览器页面可见高度和宽度
-        var _PageHeight = document.documentElement.clientHeight,
-            _PageWidth = document.documentElement.clientWidth;
-        //计算loading框距离顶部和左部的距离（loading框的宽度为215px，高度为61px）
-        var _LoadingTop = _PageHeight > 61 ? (_PageHeight - 61) / 2 : 0,
-            _LoadingLeft = _PageWidth > 215 ? (_PageWidth - 215) / 2 : 0;
+ //获取浏览器页面可见高度和宽度
+        var _PageHeight = document.documentElement.clientHeight;
         //在页面未加载完毕之前显示的loading Html自定义内容
-        var _LoadingHtml = '<div id="loadingDiv" style="position:absolute;left:0;width:100%;height:' + _PageHeight + 'px;top:0;background:#fff;opacity:0.9;z-index:10000;"><div style="position: absolute; cursor1: wait; left: ' + _LoadingLeft + 'px; top:' + _LoadingTop + 'px; width: auto; height: 57px; line-height: 57px; padding-left: 50px; padding-right: 5px; background: #fff url(/Content/loading.gif) no-repeat scroll 5px 10px; border: 2px solid #95B8E7; color: #696969; font-family:\'Microsoft YaHei\';">页面加载中，请等待...</div></div>';
+        var _LoadingHtml = '<div id="loadingDiv" style="position:absolute;left:0;width:100%;height:' + 
+        _PageHeight +
+         'px;top:0;background:#f12b71;z-index:10000;opacity:0.9"><div style="position: absolute; cursor1: wait; left: 50%;'+
+         'margin-left:-60px; top:50%;'+ 
+         'margin-top:-60px; width:120px;'+
+         ' height:120px; background:url(images/loading-image.gif) no-repeat center;"></div></div>';
         //呈现loading效果
         document.write(_LoadingHtml);
  
@@ -34,7 +35,6 @@
                 loadingMask.parentNode.removeChild(loadingMask);
             }
         }
-
   </script>
   <style>
 body{background-color:#f12b71}#lottery_btn{background-image:url(../images/event-01-25/lottery-btn.png);background-repeat:no-repeat;background-size:contain;background-position:center}#lottery_btn:active{background-image:url(../images/event-01-25/lottery-btn-actived.png)}.lottery-head-img img{display:block;width:100%}.lottery-head-img img.lottery-animation-text{position:absolute;z-index:9;top:0;-webkit-animation:mytop ease-in-out 2.3s infinite;animation:mytop ease-in-out 2.3s infinite}@-webkit-keyframes mydown{40%{bottom:0.35rem}100%{bottom:0}}@keyframes mydown{40%{bottom:0.35rem}100%{bottom:0}}@-webkit-keyframes mytop{50%{top:0.5rem}100%{top:0}}@keyframes mytop{50%{top:0.5rem}100%{top:0}}.prize-lotter{margin:1rem auto;width:17.3rem;height:16.5rem;box-sizing:border-box;padding:0.36rem;background-color:#cd0849}.prize-lotter li{float:left;width:5.3rem;height:5.05rem;margin:0.1rem;position:relative}.prize-lotter li img,.prize-lotter li a{display:block;width:100%;height:100%}.prize-lotter-shadow{background-color:#fff;width:100%;height:100%;opacity:0.3;position:absolute;top:0;border-radius:0.4rem}.ui-dialog-success{background-image:url(../images/event-01-25/dailog-success-bg.png);background-position:top;background-repeat:no-repeat;background-size:contain}.ui-dialog-success .ui-dialog-close{background-image:url(../images/event-01-25/btn-close-red.png) !important}.ui-dialog-fail{background-image:url(../images/event-01-25/dailog-fail-bg.png);background-position:top;background-repeat:no-repeat;background-size:contain}.ui-dialog-fail .ui-dialog-close{background-image:url(../images/event-01-25/btn-close-black.png) !important}#lottery_award_content{font-size:0.7rem;line-height:1.8;padding-top:40%}.lottery-award-users{margin:0 auto;width:17.3rem;overflow:hidden}.lottery-scroll{overflow:hidden;width:1000rem;height:0.8rem;text-align:left}.award-users-list{float:left;font-size:0.75rem}.award-users-list li{float:left;padding-right:0.8rem}.event-rule-box{background-image:url(../images/event-01-25/lottery-bottom-bg.png);background-position:top;background-repeat:no-repeat;background-size:100% 100%}.event-container{width:80%;padding:2rem 0;margin:0 auto;font-size:0.75rem;color:#474747}.event-container h3{padding-bottom:0.75rem}.event-container p{padding:0.75rem 0;line-height:1.5}.event-container h3{color:#f12b71}.lottery-record-bg{background-image:url(../images/event-01-25/lottery-record-bg.png);background-position:top;background-repeat:no-repeat;background-size:100% 100%;margin-top:1rem;min-height:26.6rem}.my-award-record{padding-top:1rem;box-sizing:border-box;width:16.5rem;margin:0 auto}.record-head{font-size:1rem;color:#777;border-bottom:0.1rem solid #d1c0a5}.record-head span{text-align:center;display:inline-block;width:49%;padding:0.5rem 0}.record-list{font-size:0.75rem;color:#474747;padding-top:0.5rem}.record-list li{padding:0.5rem 0}.record-list li span{display:inline-block;width:49%;text-align:center}
