update 抽奖动画更加自然 By Gao 2016-01-23

--- a/src/lottery.html
+++ b/src/lottery.html
@@ -62,7 +62,7 @@
       <a href="" class="ui-link ui-link-gray">抽奖规则</a>
     </p>
     </div>
-  <div class="detail-btn-wrap">
+  <div class="setting-btn-wrap">
       <div class="clearfix">
         <a href="#" class="ui-btn ui-btn-whiteBlack ui-btn-inline">晒钱罐</a>
         <a href="#" class="ui-btn ui-btn-main ui-btn-inline">存 钱</a>
