update 解耦两个抽奖活动的样式 by Gao 2016-01-23

--- a/src/event-01-25.html
+++ b/src/event-01-25.html
@@ -11,8 +11,7 @@
   <meta name="format-detection" content="telphone=no, email=no"/>
   <meta name="HandheldFriendly" content="true">
   <title>过年天天乐</title>
-  <link rel="stylesheet" type="text/css" href="style/main.min.css">
-  <link rel="stylesheet" type="text/css" href="style/event-lottery.min.css">
+  <link rel="stylesheet" type="text/css" href="style/eventlottery.min.css">
   <script src="js/lib/jquery.min.js"></script>
   <script src="js/event-01-25-loading.js"></script>
 </head>
